Propiedades de cajas (padding, margin, border, etc) y box model

--- a/index.html
+++ b/index.html
@@ -35,8 +35,35 @@
 		<li>Font-family, es la tipografía (osea, el tipo de letra)</li>
 		<li>Line-height, es el espacio que ocupa un determinado texto (NO es lo mismo que el font-size; el line-height incluye también el espacio vacío arriba y abajo de la letra). Por ejemplo, <span style="line-height: 1; color: blue">Este texto tiene line-height=1</span><br><span style="line-height: 4; color: orange"> y este otro tiene line-height=4</span></li>
 		<li>Font-weight, es el grosor de la letra</li>
+		<li>Text-align, con el valor center hace que el texto se coloque en el medio de su contenedor</li>
 		<li>Font-variant, no lo explicó pero lo guardo</li>
+		<li>Font-style, no lo explicó pero lo guardo</li>
+		<li>Text-decoration, no lo explicó pero lo guardo</li>
+		<li>List-style, no lo explicó pero lo guardo</li>
 	</ul>
 <br><br><br>
+	<h3>Propiedades de cajas</h3>
+	<ul>
+		<li>Background-color, cambia el color de fondo</li>
+		<li>Padding, es la distancia entre un contenido (texto, imagen, título, etc) y las paredes de su contenedor. Se puede establecer el padding de cada borde (top, right, bottom, left) uno por uno (padding-top, padding-right, padding-bottom, padding-left) o en una sola línea, pudiendo escribir 2, 3 o 4 valores:</li>
+		<ul>
+			<li>padding: <em>top right bottom left</em> ;</li>
+			<li>padding: <em>top ejeX bottom</em> ;</li>
+			<li>padding: <em>ejeY ejeX</em> ;</li>
+		</ul>
+		<li>Margin, es la distancia entre dos cajas. Para establecerlo, funciona igual que el padding</li>
+		<li>Border, sirve para caracterizar el borde de una caja. Se usan los siguientes parámetros:</li>
+		<ul>
+			<li>border: <em>tamaño tipo color</em> ;</li>
+			<li>border: 10px solid blue ;</li>
+		</ul>
+		<li>Border radius, establece cuántos píxeles vamos a eliminar para que un cuadrado tenga bordes redondos</li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+	<b class="box_properties">Incorporar nutrientes a la dieta diara</b>
+	<b class="box_properties">Incorporar nutrientes a la dieta diara</b>
+	<b class="box_properties">Incorporar nutrientes a la dieta diara</b>
 </body>
 </html>
